# yui_stock

./: .firebaserc  .gitignore  LICENSE  LLM活用プロジェクトのドキュメント戦略.md  README.md  app.py  constants.py  firebase_auth.py  firebase_client.py  firebase_sample.py  llms-full.txt  llms.txt  package-lock.json  package.json  page_check_needed.py  page_register_stock.py  page_register_taken.py  pyproject.toml  requirements.txt
.history/: .gitignore_20250719235906  README_20250719231402.md  README_20250719235916.md  app_20250719191035.py  app_20250719232311.py  app_20250719232317.py  app_20250719232336.py  app_20250719232502.py  app_20250719232705.py  app_20250719232719.py  app_20250719233928.py  app_20250719234124.py  app_20250719234359.py  app_20250719234951.py  firebase_sample_20250719235045.py  page_check_needed_20250719232635.py  page_check_needed_20250719232853.py  page_register_stock_20250719232728.py  page_register_stock_20250719232927.py  page_register_stock_20250719233347.py  page_register_stock_20250719233547.py  page_register_stock_20250719233701.py  page_register_taken_20250719232653.py  page_register_taken_20250719232857.py  page_register_taken_20250719233338.py  page_register_taken_20250719233556.py  page_register_taken_20250719233657.py  page_top_20250719233935.py  page_top_20250719234141.py  utils_20250719232728.py
.streamlit/: secrets.toml
docs/: README.md
docs/architecture/: overview.md
docs/components/: main-features.md
public/: index.html  manifest.json
scripts/: create-icon.js  generate-icons.html
src/: App.css  App.tsx  firebase.ts
(+25 files in other folders)
