[project]
name = "yui-stock"
version = "0.1.0"
description = ""
authors = [
    {name = "juntaniguchi",email = "ultia0602@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
dependencies = [
    "streamlit (>=1.47.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
